# TradeBot

./: .gitignore  AGENTS.md  Makefile  README.md  README_CN.md  alembic.ini  pyproject.toml  requirements.txt  roadmap.md  test.ipynb
.github/workflows/: ark-holdings-daily.yml  ci.yml
EXTERNAL_API_DOC/: alpaca_doc.md
adapters/: README.md  __init__.py
adapters/brokers/: alpaca.py  alpaca_service.py
adapters/market_data/: __init__.py  redis_cache.py
adapters/messaging/: __init__.py  redis_command_bus.py
adapters/storage/: models.py  sqlalchemy_state_store.py  sqlite_store.py
app/: config.py  main.py  streamlit_app.py
app/models/: __init__.py  user_position.py
app/services/: alpaca_market_data.py
app/templates/: index.html
apps/: README.md
apps/api/: main.py
apps/engine/: __init__.py  commands.py  main.py  rules.py  streams.py  sync.py
apps/marketdata/: __init__.py  main.py  streams.py
apps/ui/: api_client.py  main.py  settings.py  transformers.py  views.py
config/: earnings_to_calendar.toml  events_to_google_calendar.toml
config/ci/: actions.vars
core/: README.md  __init__.py  settings.py
core/domain/: __init__.py  commands.py  market_data.py  order.py  position.py
core/ports/: __init__.py  broker.py  command_bus.py  market_data.py  market_data_cache.py  state_store.py
data_sources/ark_holdings/: README.md  __init__.py  diff.py  domain.py  io.py  provider.py  transform.py
data_sources/earnings_to_calendar/: README.md  __init__.py  __main__.py  calendars.py  cli.py  config.py  defaults.py  domain.py  earnings_config.json  macro_events.py  market_events.py  providers.py  runner.py  settings.py  sync_state.py
deploy/: Dockerfile  docker-compose.yml
docs/: README_CN.md  roadmap.md  tech_spec.md
docs/external_api/: alpaca_doc.md
notebooks/: fmp_data_check.ipynb
notification_svc/: README.md  __init__.py  email_service.py  recipient_config.py
py_scripts/alpaca/: set_stop_losses.py
py_scripts/ark_holdings/: __init__.py  cli.py  daily_pipeline.py  diff_snapshots.py  email_report.py  fetch_snapshots.py  pipeline.py  reporting.py
py_scripts/ark_holdings/ark_holdings/: ARKF_2025-10-31.csv  ARKK_2025-10-31.csv
py_scripts/calendar/: README.md  debug_fetch.py  run.py
py_scripts/email_sending/: send_test_email.py
scripts/: bootstrap_actions_config.sh  run_ark_pipeline.py
src/: __init__.py
src/ark/holdings/: README.md  io.py  provider.py
src/earnings/: __init__.py
src/earnings/calendar/: README.md  __main__.py  defaults.py  logging_utils.py  macro_events.py  providers.py
src/notifications/: README.md  __init__.py  email_service.py  recipient_config.py
storage/: README.md
storage/migrations/: env.py
storage/migrations/versions/: 0001_initial.py  (+2 more)
tests/: conftest.py
tests/data_sources/: test_earnings_to_calendar.py
tests/integration/: test_benzinga_live.py
tests/models/: test_position.py  test_user_position.py
tests/services/: test_alpaca_market_data.py
toolkits/: __init__.py
toolkits/ark/: __init__.py
toolkits/calendar_svc/: README.md  __init__.py  calendars.py  defaults.py  domain.py  macro_events.py  market_events.py  providers.py  runner.py  settings.py  sync_state.py
toolkits/notifications/: README.md  __init__.py  email_service.py  recipient_config.py
(+54 files in other folders)
